Integrate ComosDB & update list operation
